// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for AccessDenied 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    An issue occurred with the OAuth provider. Your account may not have been set up properly. Please contact support or try a different sign-in method.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for CredentialsSignin 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your account could not be found or the credentials provided were incorrect. Please check your email and password, or sign up for a new account.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthAccountExists 1`] = `
<div
  aria-live="polite"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-blue-200 bg-blue-50/80 text-blue-800 dark:border-blue-700/60 dark:bg-blue-900/30 dark:text-blue-200"
  data-testid="login-banner"
  role="status"
>
  <p
    class="text-sm font-medium"
  >
    An account with this email already exists. Sign in with your password or use "Continue with GitHub/GitLab" without create-account mode.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthEmailRequired 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your Git provider did not share an email address. Set your email to public or add a verified email on GitHub/GitLab, then try again.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for OAuthProfileIncomplete 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    We could not read your OAuth profile. Please try again or contact support.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for SignupSessionExpired 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your signup session expired. Please start again from Create account.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for TwoFactorInvalid 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    That authentication code was not accepted. Check your authenticator app and try again.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for account-disabled 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your account is currently disabled. Please contact support if you believe this is a mistake.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for account-not-verified 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    You have not yet verified your account e-mail address. Check your inbox for the verification email, then sign in again.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for identity-linked-elsewhere 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    This provider account is already linked to another user. Sign in with that account, or use a different provider account.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for last-sign-in-method 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    That account is your only way to sign in. Set a password or link another provider before unlinking it, so you keep access to your account.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for membership-suspended 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your membership in this workspace has been suspended. Contact your workspace administrator to restore access.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for provider-already-linked 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your account already has a different identity linked for this provider. Sign in with the originally linked provider account, or manage linked accounts from your dashboard.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for provider-not-configured 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Sign-in with that provider is not available on this server. Choose one of the sign-in options shown, or contact your administrator.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for sign-in-failed 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for signup-disabled 1`] = `
<div
  aria-live="polite"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-blue-200 bg-blue-50/80 text-blue-800 dark:border-blue-700/60 dark:bg-blue-900/30 dark:text-blue-200"
  data-testid="login-banner"
  role="status"
>
  <p
    class="text-sm font-medium"
  >
    New account sign-ups are currently disabled on this server. Contact your administrator to request an account or an invitation.
  </p>
</div>
`;

exports[`every known auth error code renders its own banner (OLO-3.2) renders the banner for unverified-email 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Your sign-in provider could not confirm that your email address is verified. Verify your email with the provider (e.g. GitHub or GitLab), then try again.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "   " without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "<script>alert(1)</script>" without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;

exports[`unknown error codes (OLO-3.2) falls back to the safe generic banner for "some-code-from-the-future" without echoing the code: generic banner 1`] = `
<div
  aria-live="assertive"
  class="mb-6 rounded-2xl border p-4 backdrop-blur-sm border-red-200 bg-red-50/80 text-red-800 dark:border-red-700/60 dark:bg-red-900/30 dark:text-red-200"
  data-testid="login-banner"
  role="alert"
>
  <p
    class="text-sm font-medium"
  >
    Something went wrong while signing you in. Please try again, or contact support if the issue persists.
  </p>
  <a
    class="mt-3 inline-flex items-center gap-1.5 rounded-xl border px-3.5 py-1.5 text-sm font-semibold transition-colors border-red-300 hover:bg-red-100/80 dark:border-red-600/60 dark:hover:bg-red-900/50"
    href="/login?callbackUrl=%2Fade"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-rotate-ccw"
      fill="none"
      height="14"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
      />
      <path
        d="M3 3v5h5"
      />
    </svg>
    Try again
  </a>
</div>
`;
